bug fix: Remove bg stretch, fix lang and currency

--- a/src/app/pages/countries/countries.component.scss
+++ b/src/app/pages/countries/countries.component.scss
@@ -32,8 +32,8 @@
   .flag {
     height: 50%;
     width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: $base-white no-repeat top;
+    background-size: 100% auto;
     border-top-left-radius: $xsmall;
     border-top-right-radius: $xsmall;
   }
